@@ -3,6 +3,7 @@
 - projects can now be deleted with all subprojects, all team memberships and all booked times
   Both features are really necessary for house keeping of an oTt installation over times
   Well, finally we have them :-) 
+- Bugfix in export to OpenOffice template 
 
 2.2.3
 - authentication against LDAP implemented, configurable in config.php
